# Magisterka

./: .gitignore  Magisterka.ipynb  annotate_data.py  bazaproduktow.py  best_pipeline.txt  best_pipeline1241.txt  paddle_ocr.py  pyproject.toml  test_ocr.py  test_ocr_gentic.py  wyszukiwanie.py  zczytywanie.py
latex/: SGGW-thesis-EN.cls  main-EN.aux  main-EN.bbl  main-EN.bcf  main-EN.blg  main-EN.fdb_latexmk  main-EN.fls  main-EN.out  main-EN.pyg  main-EN.run.xml  main-EN.tex  main-EN.toc  references.bib  smgv.cls
src/: tests.ipynb  train_model.py
src/analysis/: bert.ipynb  data_analysis.ipynb  lightning.py  ocr_tests.ipynb  paddle_ocr.ipynb  thesis_visualizations.ipynb  tokenization.ipynb  xgb.py  xgb_bert.py
src/conf/: config.yaml
src/conf/params/: params_augmented_best.yaml  params_best.yaml  params_best_8classes.yaml  params_best_bert.yaml
src/data/: bert.csv  generation_prompt.txt  gpt_generated_data.csv
src/data/annotations/: 12.jsonl  annotations.csv  annotations_6classes.csv  annotations_8classes.csv  annotations_gpt.csv  gpt_generated_data.csv  gpt_generated_data8classes.csv
src/data/preprocessed/: 1.box  1.lstmf  4.box  6.box  6.lstmf  7.box  7.lstmf
src/data/tesseract_model/: train.list
src/model/: classifier.py  dataloader.py  embeddings.py  ocr.py  xgboost_model.json
src/model/finetuned_augmented_model/: README.md
src/model/finetuned_augmented_model/eval/: similarity_evaluation_dev_results.csv
src/scripts/: annotation_pipeline.py
src/utils/: annotation_pipeline.py  utils.py
