[tool.poetry]
name = "magisterka"
version = "0.1.0"
description = ""
authors = ["mizaqq <michal.zareba@softwaremill.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.48.1"
datasets = "^3.2.0"
pillow = "^11.1.0"
ipynb = "^0.5.1"
protobuf = "^5.29.3"
sentencepiece = "^0.2.0"
lightning = "^2.5.0.post0"
pytesseract = "^0.3.13"
opencv-python = "^4.11.0.86"
accelerate = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
