[project]
name = "magisterka"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "transformers<5.0.0,>=4.48.1",
    "datasets<4.0.0,>=3.2.0",
    "pillow<12.0.0,>=11.1.0",
    "ipynb<1.0.0,>=0.5.1",
    "protobuf<6.0.0,>=5.29.3",
    "sentencepiece<1.0.0,>=0.2.0",
    "lightning<3.0.0.0,>=2.5.0.post0",
    "pytesseract<1.0.0,>=0.3.13",
    "opencv-python<5.0.0.0,>=4.11.0.86",
    "accelerate<2.0.0,>=1.3.0",
    "scikit-image<1.0.0,>=0.25.2",
    "rapidfuzz<4.0.0,>=3.12.1",
    "xgboost<4.0.0,>=3.0.0",
    "paddleocr>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.29.5",
]
[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
